test/should-fail/常量-1.j
globals
    constant integer i = 0
endglobals

function test takes nothing returns nothing
    set i = 1
endfunction